# arblens

./: .gitignore  AGENTS.md  Makefile  README.md  main.py  pyproject.toml
docs/: AI.md
docs/decisions/: 0001-rest-polling-first.md
docs/milestones/: plan.notes.txt  week1.txt  week2.txt
docs/tasks/: 000-project-setup.md  010-exchange-adapters.md  020-spread-and-slippage.md
src/arblens/analytics/: __init__.py  spread.py
src/arblens/cli/: main.py
src/arblens/domain/models/: __init__.py  exchange.py
src/arblens/domain/models.py/: __init__.py
src/arblens/exchanges/: base.py  bybit.py  errors.py  okx.py  pair.py  symbols.py
tests/: conftest.py
tests/unit/: test_bybit_orderbook_parsing.py  test_okx_orderbook_parsing.py  test_spread.py
